[button] fix(button input modal and tabs): Fix tabs text alignment, remove jumping effect when clicking on a tab and remove the white gap under the modal footer.

--- a/packages/plugin-button/statics/styles/button-input-modal.scss
+++ b/packages/plugin-button/statics/styles/button-input-modal.scss
@@ -89,7 +89,7 @@
 
 .errorIcon {
   position: absolute;
-  top: -2px;
+  top: -1px;
   left: 123px;
 }
 
@@ -100,9 +100,7 @@
 
 .settingTab {
   position: relative;
-  margin-top: 4px;
   width: 100%;
-  height: 18px;
 }
 .scroll_container {
   overflow-y: scroll;
@@ -110,11 +108,15 @@
 }
 
 .tabs_panel {
-  height: calc(100vh - 232px);
+  height: calc(100vh - 223px);
   overflow: hidden;
   box-sizing: border-box;
   padding: 0px 30px 0px;
   padding-right: 0px;
+}
+
+.tabLabel{
+  margin-top: 12px;
 }
 
 .scrollbar_thumb {
